--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,11 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/clockContainer"
-        android:name="com.example.thread.ClockFragment"
-        android:layout_width="0dp"
-        android:layout_height="5dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="32dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="92dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addButton" />
 
