--- a/app/src/main/res/layout/fragment_clock.xml
+++ b/app/src/main/res/layout/fragment_clock.xml
@@ -8,37 +8,14 @@
 
 
     <EditText
-        android:id="@+id/hours"
-        android:layout_width="96dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="60dp"
+        android:id="@+id/textClock"
+        android:name="10"
+        android:layout_width="320dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="56dp"
         android:ems="10"
-        android:name = "10"
-        android:inputType="numberDecimal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/minutes"
-        android:layout_width="77dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="28dp"
-        android:ems="10"
-        android:name = "15"
-        android:inputType="numberDecimal"
-        app:layout_constraintStart_toEndOf="@+id/hours"
-        app:layout_constraintTop_toTopOf="@+id/hours" />
-
-    <EditText
-        android:id="@+id/seconds"
-        android:layout_width="72dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="16dp"
-        android:ems="10"
-        android:name = "44"
-        android:inputType="numberDecimal"
-        app:layout_constraintStart_toEndOf="@+id/minutes"
-        app:layout_constraintTop_toTopOf="@+id/minutes" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
